# Atividade_3

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  PLANS.md  PRIMING.md  README.md  backup_atividade_2.sql  backup_atividade_2_reset.sql  compose.yaml  pyproject.toml
database/: README.md
database/ddl_banco/: ddl_atividade_2.sql
database/dumps/: dump_respostas.sql
docs/: audit_log_contract.md
outputs/audit/: prod_logs_manifest.txt
outputs/av3/: candidate_rag_smoke_context_profiles.json  candidate_rag_smoke_context_profiles_dryrun.json  candidate_rag_smoke_gpt5_chat.json  (+8 more)
scripts/: db_backup.sh  db_dump_root_backup.sh  db_ensure_schema.sh  db_migrate_or_create.sh  db_up.sh  smoke_candidates_rag.py  validate_audit_log_coverage.py
tests/: test_assistant.py  test_audit_log_parser.py  test_audit_log_service.py  test_candidate_answer_normalization.py  test_candidate_client.py  test_candidate_clients.py  test_candidate_context_budget.py  test_candidate_model_assignment_registry.py  test_candidate_prompts.py  test_cli.py  test_config.py  test_contracts.py  test_dashboard.py  test_database_dump.py  test_db_backup_script.py  test_db_ensure_schema_script.py  test_evaluation_details_import.py  test_parser.py  test_pipeline.py  test_prompts.py  test_provider_model_validation.py  test_rag_context_snapshots.py  test_rag_embeddings.py  test_rag_retriever.py  test_rag_source_fetch.py  test_remote_http.py  test_repositories.py  test_run_candidates_rag_service.py  test_run_judge_service.py  test_smoke_candidates_rag.py  test_web.py
(+41 files in other folders)
