[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atividade-2"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "psycopg2-binary",
  "pypdf",
  "pydantic",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "httpx",
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
